// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<JobErrors /> should render properly while loading 1`] = `
Array [
  .emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
  padding-right: 4px;
  color: #808080;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

.emotion-1 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
  padding-right: 4px;
  color: #808080;
}

.emotion-3 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
}

<div
    className="emotion-2"
  >
    <div
      className="emotion-2"
    >
      <a
        className="emotion-0"
        href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Job Queue
      </a>
      <span
        className="emotion-1"
      >
        /
      </span>
    </div>
    <h2
      className="emotion-3"
    >
      Task Errors
    </h2>
  </div>,
  .emotion-3 {
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-2 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 {
  padding-right: 16px;
}

.emotion-0 {
  border: 0 #b8d652 solid;
  border-bottom-width: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<nav
    className="emotion-3"
  >
    <ul
      className="emotion-2"
    >
      <li
        className="emotion-1"
      >
        <a
          className="emotion-0"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/c097596f-62ef-1f81-83f8-0a580a000954/errors"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          All Errors
        </a>
      </li>
    </ul>
  </nav>,
  .emotion-12 {
  height: 100%;
}

.emotion-11 {
  width: 100%;
  height: 100%;
  border-spacing: 0;
  box-shadow: 0 0 5px 0 #000000;
  white-space: nowrap;
}

.emotion-11 tr {
  background-color: #252525;
}

.emotion-11 tr:nth-of-type(2n) {
  background-color: #2e2e2e;
}

.emotion-11 tr:hover {
  background-color: #4a4a4a;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
}

.emotion-11 tr:hover td {
  border: 1px solid #808080;
  border-left: 0;
  border-right: 0;
}

.emotion-11 tr:hover td:first-of-type {
  border-left: 1px solid #808080;
}

.emotion-11 tr:hover td:last-of-type {
  border-right: 1px solid #808080;
}

.emotion-11 td {
  max-width: calc(100vw / 7);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #e0e0e0;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0;
  border-right: 0;
}

.emotion-11 td:first-of-type {
  border-left: 1px solid transparent;
}

.emotion-11 td:last-of-type {
  border-right: 1px solid transparent;
  overflow: visible;
}

.emotion-0 {
  text-align: left;
  font-size: 15px;
  line-height: 18px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 12px 16px;
  border-bottom: 1px solid #2e2e2e;
}

.emotion-0:nth-of-type(4) {
  width: 100%;
}

.emotion-0:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-10 {
  height: 100%;
  pointer-events: none;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  color: #808080;
  font-size: 15px;
  line-height: 18px;
}

<div
    className="emotion-12"
  >
    <table
      className="emotion-11"
    >
      <thead>
        <tr>
          <th
            className="emotion-0"
          >
            Error Type
          </th>
          <th
            className="emotion-0"
          >
            Error ID
          </th>
          <th
            className="emotion-0"
          >
            Task ID
          </th>
          <th
            className="emotion-0"
          >
            Message
          </th>
          <th
            className="emotion-0"
          >
            File Path
          </th>
          <th
            className="emotion-0"
          >
            Processor
          </th>
          <th
            className="emotion-0"
          >
            Time
          </th>
          <th
            className="emotion-0"
          >
            <div
              className="emotion-7"
            >
              <svg
                data-file-name="gear.svg"
                width={20}
              />
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          className="emotion-10"
        >
          <td
            colSpan={8}
          >
            <div
              className="emotion-9"
            >
              Loading...
            </div>
          </td>
        </tr>
      </tbody>
    </table>
    <div>
       
    </div>
    <div>
       
    </div>
  </div>,
]
`;

exports[`<JobErrors /> should render properly with job errors 1`] = `
Array [
  .emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
  padding-right: 4px;
  color: #808080;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

.emotion-1 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
  padding-right: 4px;
  color: #808080;
}

.emotion-3 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
}

<div
    className="emotion-2"
  >
    <div
      className="emotion-2"
    >
      <a
        className="emotion-0"
        href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Job Queue
      </a>
      <span
        className="emotion-1"
      >
        /
      </span>
    </div>
    <h2
      className="emotion-3"
    >
      Task Errors
    </h2>
  </div>,
  .emotion-3 {
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-2 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 {
  padding-right: 16px;
}

.emotion-0 {
  border: 0 #b8d652 solid;
  border-bottom-width: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<nav
    className="emotion-3"
  >
    <ul
      className="emotion-2"
    >
      <li
        className="emotion-1"
      >
        <a
          className="emotion-0"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/c097596f-62ef-1f81-83f8-0a580a000954/errors"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          All Errors
        </a>
      </li>
    </ul>
  </nav>,
  .emotion-0 {
  text-align: left;
  font-size: 15px;
  line-height: 18px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 12px 16px;
  border-bottom: 1px solid #2e2e2e;
}

.emotion-0:nth-of-type(4) {
  width: 100%;
}

.emotion-0:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-22 {
  height: auto;
}

.emotion-21 {
  width: 100%;
  height: auto;
  border-spacing: 0;
  box-shadow: 0 0 5px 0 #000000;
  white-space: nowrap;
}

.emotion-21 tr {
  background-color: #252525;
}

.emotion-21 tr:nth-of-type(2n) {
  background-color: #2e2e2e;
}

.emotion-21 tr:hover {
  background-color: #4a4a4a;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
}

.emotion-21 tr:hover td {
  border: 1px solid #808080;
  border-left: 0;
  border-right: 0;
}

.emotion-21 tr:hover td:first-of-type {
  border-left: 1px solid #808080;
}

.emotion-21 tr:hover td:last-of-type {
  border-right: 1px solid #808080;
}

.emotion-21 td {
  max-width: calc(100vw / 7);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #e0e0e0;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0;
  border-right: 0;
}

.emotion-21 td:first-of-type {
  border-left: 1px solid transparent;
}

.emotion-21 td:last-of-type {
  border-right: 1px solid transparent;
  overflow: visible;
}

.emotion-10 {
  position: relative;
}

.emotion-9 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 18px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  color: #191919;
  padding: 6px;
  margin: -6px;
  border-radius: 32px;
}

.emotion-9:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-9[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-9:hover {
  background-color: #808080;
}

<div
    className="emotion-22"
  >
    <table
      className="emotion-21"
    >
      <thead>
        <tr>
          <th
            className="emotion-0"
          >
            Error Type
          </th>
          <th
            className="emotion-0"
          >
            Error ID
          </th>
          <th
            className="emotion-0"
          >
            Task ID
          </th>
          <th
            className="emotion-0"
          >
            Message
          </th>
          <th
            className="emotion-0"
          >
            File Path
          </th>
          <th
            className="emotion-0"
          >
            Processor
          </th>
          <th
            className="emotion-0"
          >
            Time
          </th>
          <th
            className="emotion-0"
          >
            <div
              className="emotion-7"
            >
              <svg
                data-file-name="gear.svg"
                width={20}
              />
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            Warning
          </td>
          <td>
            916c86bc-74b9-1519-b065-d2f0132bc0c8
          </td>
          <td>
            b81f47e9-7382-1519-b88a-d2f0132bc0c8
          </td>
          <td>
            AttributeError: 'NoneType' object has no attribute 'startswith'
          </td>
          <td>
            /opt/app-root/lib/python2.7/site-packages/zsdk/document/asset.py
          </td>
          <td>
            HSVSimilarityProcessor
          </td>
          <td>
            2020-01-17 00:25:26
          </td>
          <td>
            <div
              className="emotion-10"
            >
              <button
                aria-label="Toggle Actions Menu"
                className="emotion-9"
                onBlur={[Function]}
                onClick={[Function]}
                type="button"
              >
                <svg
                  data-file-name="gear.svg"
                  width={20}
                />
              </button>
            </div>
          </td>
        </tr>
        <tr>
          <td>
            Fatal
          </td>
          <td>
            916c86bb-74b9-1519-b065-d2f0132bc0c8
          </td>
          <td>
            b81f47e9-7382-1519-b88a-d2f0132bc0c8
          </td>
          <td>
            NotFound: 404 GET https://storage.googleapis.com/download/storage/v1/b/zorroa-deploy-testdata/o/zorroa-cypress-testdata%2Fmultipage?alt=media: (u'Request failed with status code', 404, u'Expected one of', 200, 206)
          </td>
          <td>
            /opt/app-root/lib/python2.7/site-packages/google/cloud/storage/blob.py
          </td>
          <td>
            DuplicateDetectionProcessor
          </td>
          <td>
            2020-01-17 00:25:26
          </td>
          <td>
            <div
              className="emotion-10"
            >
              <button
                aria-label="Toggle Actions Menu"
                className="emotion-9"
                onBlur={[Function]}
                onClick={[Function]}
                type="button"
              >
                <svg
                  data-file-name="gear.svg"
                  width={20}
                />
              </button>
            </div>
          </td>
        </tr>
        <tr>
          <td>
            Warning
          </td>
          <td>
            916c86ba-74b9-1519-b065-d2f0132bc0c8
          </td>
          <td>
            b81f47e9-7382-1519-b88a-d2f0132bc0c8
          </td>
          <td>
            AttributeError: 'NoneType' object has no attribute 'startswith'
          </td>
          <td>
            /opt/app-root/lib/python2.7/site-packages/zsdk/document/asset.py
          </td>
          <td>
            ResNetSimilarityProcessor
          </td>
          <td>
            2020-01-17 00:25:26
          </td>
          <td>
            <div
              className="emotion-10"
            >
              <button
                aria-label="Toggle Actions Menu"
                className="emotion-9"
                onBlur={[Function]}
                onClick={[Function]}
                type="button"
              >
                <svg
                  data-file-name="gear.svg"
                  width={20}
                />
              </button>
            </div>
          </td>
        </tr>
        <tr>
          <td>
            Fatal
          </td>
          <td>
            916c86b9-74b9-1519-b065-d2f0132bc0c8
          </td>
          <td>
            b81f47e9-7382-1519-b88a-d2f0132bc0c8
          </td>
          <td>
            AttributeError: 'NoneType' object has no attribute 'startswith'
          </td>
          <td>
            /opt/app-root/lib/python2.7/site-packages/zsdk/document/asset.py
          </td>
          <td>
            ResNetClassifyProcessor
          </td>
          <td>
            2020-01-17 00:25:26
          </td>
          <td>
            <div
              className="emotion-10"
            >
              <button
                aria-label="Toggle Actions Menu"
                className="emotion-9"
                onBlur={[Function]}
                onClick={[Function]}
                type="button"
              >
                <svg
                  data-file-name="gear.svg"
                  width={20}
                />
              </button>
            </div>
          </td>
        </tr>
        <tr>
          <td>
            Warning
          </td>
          <td>
            916c86b8-74b9-1519-b065-d2f0132bc0c8
          </td>
          <td>
            b81f47e9-7382-1519-b88a-d2f0132bc0c8
          </td>
          <td>
            AttributeError: 'NoneType' object has no attribute 'startswith'
          </td>
          <td>
            /opt/app-root/lib/python2.7/site-packages/zsdk/document/asset.py
          </td>
          <td>
            FaceRecognitionProcessor
          </td>
          <td>
            2020-01-17 00:25:26
          </td>
          <td>
            <div
              className="emotion-10"
            >
              <button
                aria-label="Toggle Actions Menu"
                className="emotion-9"
                onBlur={[Function]}
                onClick={[Function]}
                type="button"
              >
                <svg
                  data-file-name="gear.svg"
                  width={20}
                />
              </button>
            </div>
          </td>
        </tr>
        <tr>
          <td>
            Warning
          </td>
          <td>
            916c86b7-74b9-1519-b065-d2f0132bc0c8
          </td>
          <td>
            b81f47e9-7382-1519-b88a-d2f0132bc0c8
          </td>
          <td>
            NotFound: 404 GET https://storage.googleapis.com/download/storage/v1/b/zorroa-deploy-testdata/o/zorroa-cypress-testdata%2Fmultipage?alt=media: (u'Request failed with status code', 404, u'Expected one of', 200, 206)
          </td>
          <td>
            /opt/app-root/lib/python2.7/site-packages/google/cloud/storage/blob.py
          </td>
          <td>
            ImageImporter
          </td>
          <td>
            2020-01-17 00:25:26
          </td>
          <td>
            <div
              className="emotion-10"
            >
              <button
                aria-label="Toggle Actions Menu"
                className="emotion-9"
                onBlur={[Function]}
                onClick={[Function]}
                type="button"
              >
                <svg
                  data-file-name="gear.svg"
                  width={20}
                />
              </button>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
    <div>
       
    </div>
    <Pagination
      currentPage={1}
      totalPages={1}
    />
    <div>
       
    </div>
  </div>,
]
`;

exports[`<JobErrors /> should render properly with no job errors 1`] = `
Array [
  .emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
  padding-right: 4px;
  color: #808080;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

.emotion-1 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
  padding-right: 4px;
  color: #808080;
}

.emotion-3 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
}

<div
    className="emotion-2"
  >
    <div
      className="emotion-2"
    >
      <a
        className="emotion-0"
        href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Job Queue
      </a>
      <span
        className="emotion-1"
      >
        /
      </span>
    </div>
    <h2
      className="emotion-3"
    >
      Task Errors
    </h2>
  </div>,
  .emotion-3 {
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-2 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 {
  padding-right: 16px;
}

.emotion-0 {
  border: 0 #b8d652 solid;
  border-bottom-width: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<nav
    className="emotion-3"
  >
    <ul
      className="emotion-2"
    >
      <li
        className="emotion-1"
      >
        <a
          className="emotion-0"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/c097596f-62ef-1f81-83f8-0a580a000954/errors"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          All Errors
        </a>
      </li>
    </ul>
  </nav>,
  .emotion-13 {
  height: 100%;
}

.emotion-12 {
  width: 100%;
  height: 100%;
  border-spacing: 0;
  box-shadow: 0 0 5px 0 #000000;
  white-space: nowrap;
}

.emotion-12 tr {
  background-color: #252525;
}

.emotion-12 tr:nth-of-type(2n) {
  background-color: #2e2e2e;
}

.emotion-12 tr:hover {
  background-color: #4a4a4a;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
}

.emotion-12 tr:hover td {
  border: 1px solid #808080;
  border-left: 0;
  border-right: 0;
}

.emotion-12 tr:hover td:first-of-type {
  border-left: 1px solid #808080;
}

.emotion-12 tr:hover td:last-of-type {
  border-right: 1px solid #808080;
}

.emotion-12 td {
  max-width: calc(100vw / 7);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #e0e0e0;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0;
  border-right: 0;
}

.emotion-12 td:first-of-type {
  border-left: 1px solid transparent;
}

.emotion-12 td:last-of-type {
  border-right: 1px solid transparent;
  overflow: visible;
}

.emotion-0 {
  text-align: left;
  font-size: 15px;
  line-height: 18px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 12px 16px;
  border-bottom: 1px solid #2e2e2e;
}

.emotion-0:nth-of-type(4) {
  width: 100%;
}

.emotion-0:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-11 {
  height: 100%;
  pointer-events: none;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  color: #808080;
  font-size: 15px;
  line-height: 18px;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 18px;
  line-height: 21px;
}

<div
    className="emotion-13"
  >
    <table
      className="emotion-12"
    >
      <thead>
        <tr>
          <th
            className="emotion-0"
          >
            Error Type
          </th>
          <th
            className="emotion-0"
          >
            Error ID
          </th>
          <th
            className="emotion-0"
          >
            Task ID
          </th>
          <th
            className="emotion-0"
          >
            Message
          </th>
          <th
            className="emotion-0"
          >
            File Path
          </th>
          <th
            className="emotion-0"
          >
            Processor
          </th>
          <th
            className="emotion-0"
          >
            Time
          </th>
          <th
            className="emotion-0"
          >
            <div
              className="emotion-7"
            >
              <svg
                data-file-name="gear.svg"
                width={20}
              />
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          className="emotion-11"
        >
          <td
            colSpan={8}
          >
            <div
              className="emotion-10"
            >
              <div
                className="emotion-9"
              >
                <svg
                  data-file-name="noJobs.svg"
                  width={200}
                />
                <div>
                  This job has no errors.
                </div>
                <div>
                  Any new error will appear here.
                </div>
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
    <div>
       
    </div>
    <div>
       
    </div>
  </div>,
]
`;
